# brc20-trading-bot-rs

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
src/: db.rs  main.rs  platform.rs  robot.rs  types.rs  utils.rs
